api(v4): add logs drains

--- a/content/api/v4.md
+++ b/content/api/v4.md
@@ -193,6 +193,9 @@ Example response:
 ```
 
 ## Logs
+
+### Get logs stream
+
 - `/v4/logs/organisations/{ownerId}/applications/{applicationId}/logs`
 - Type: `GET`
 
@@ -210,6 +213,42 @@ Answers with logs in a SSE (Server-Sent Events) stream. You can use optional par
 | `service`                   | `string` | systemd service name, repeated (default: `bas` and `bas-deploy`, can be `all`) |
 | `throttleElements`          | `int`    | Maximum elements read per `throttlePerInMilliseconds`, default `100`           |
 | `throttlePerInMilliseconds` | `long`   | Default `300`                                                                  |
+
+### Create a logs drain
+
+- `/v4/drains/organisations/{ownerId}/applications/{applicationId}/drains`
+- Type: `POST`
+
+```json
+{
+  "kind": "ACCESSLOG|LOG",
+  "recipient": {
+    "url": "<endpoint>",
+    "type":"<recipient_type>"
+    // Optional parameters, depending on recipient_type
+  }
+}
+```
+
+| Parameter.                        | Type     | Comment                                                                                                 |
+| :---                              | :---     | :---                                                                                                    |
+| `type`                            | `string` | `DatadogRecipient`, `ElasticsearchRecipient`, `NewRelicRecipient`, `OVHTCPRecipient`, `RawRecipient`    |
+| `username`                        | `string` | Basic Auth username                                                                                     |
+| `password`                        | `string` | Basic Auth password                                                                                     |
+| `index`                           | `string` | ElasticSearch index                                                                                     |
+| `apiKey`                          | `string` | NewRelic API key                                                                                        |
+| `token`                           | `string` | OVHcloud token                                                                                          |
+| `rfc5424StructuredDataParameters` | `string` | OVHcloud RFC 5424 structured data parameters                                                            |
+
+### List logs drains
+
+- `/v4/drains/organisations/{ownerId}/applications/{applicationId}/drains`
+- Type: `GET`
+
+### Manage a logs drain
+
+- `/v4/drains/organisations/{ownerId}/applications/{applicationId}/drains/{drainId}`
+- Type: `GET`/`DELETE`
 
 ## Operators
 A Clever Cloud Operator deploys and manage resources for a given service. Available operators are: `keycloak`, `matomo`, `metabase`, `otoroshi`.
