fix: enhance links texts

--- a/content/changelog/2024/01-11-redis-7.2.4.md
+++ b/content/changelog/2024/01-11-redis-7.2.4.md
@@ -26,4 +26,4 @@ Redis™ `7.2.4` is now available for each new deployment. You can easily migrat
 * Fix slot ownership not being properly handled when deleting a slot from a node (#12564)
 * Fix atomicity issues with the RedisModuleEvent_Key module API event (#12733)
 
-Learn more about Redis™ 7.2.x branch [here](https://redis.com/blog/introducing-redis-7-2/).
+- [Learn more about Redis™ 7.2.x branch](https://redis.com/blog/introducing-redis-7-2/).
