--- a/content/changelog/2024/01-24-ruby-3.3.0.md
+++ b/content/changelog/2024/01-24-ruby-3.3.0.md
@@ -16,7 +16,7 @@ excludeSearch: true
 
 You can now choose the `3.3.0` release of Ruby when you deploy Ruby on Rails applications on Clever Cloud. It can be set either through your `Gemfile` or the `CC_RUBY_VERSION` [environment variable](/developers/doc/reference/reference-environment-variables/#ruby).
 
-* Learn more about Ruby 3.3.0 release [here](https://www.ruby-lang.org/en/news/2023/12/25/ruby-3-3-0-released/)
+* [Learn more about Ruby 3.3.0 release](https://www.ruby-lang.org/en/news/2023/12/25/ruby-3-3-0-released/)
 
 {{< callout type="info" >}}
   If you use Node.js on this image, be aware that default version is now 20.11.0 (LTS). If you need another release to deploy your application, set the `CC_NODE_VERSION` [environment variable](/developers/doc/develop/env-variables/).
