--- a/content/changelog/2025/07-10-redis-8.0.3.md
+++ b/content/changelog/2025/07-10-redis-8.0.3.md
@@ -15,4 +15,4 @@ excludeSearch: true
 We updated Redis™ to [release 8.0.3](https://github.com/redis/redis/releases/tag/8.0.3) which fixes [CVE-2025-32023](https://nvd.nist.gov/vuln/detail/CVE-2025-32023) and [CVE-2025-48367](https://nvd.nist.gov/vuln/detail/CVE-2025-48367). It's available for add-ons creation and migration. Starting this release, Redis™ on Clever Cloud comes with the JSON module enabled.
 
 - [Learn more about Redis™ on Clever Cloud](/developers/doc/addons/redis/)
-- [Learn more about Redis™ JSON data type]([/developers/doc/addons/redis/](https://redis.io/docs/latest/develop/data-types/json/))
+- [Learn more about Redis™ JSON data type](https://redis.io/docs/latest/develop/data-types/json/)
