fix: add aliases

--- a/content/changelog/2024/01-11-redis-7.2.4.md
+++ b/content/changelog/2024/01-11-redis-7.2.4.md
@@ -11,6 +11,7 @@ authors:
 description: Use Redis 7.2 in its latest release on Clever Cloud
 aliases:
 - /changelog/2024-01-11-redis-7.2.4
+- /changelog/2024-01-11-redis-update
 excludeSearch: true
 ---
 
