fix: add aliases

--- a/content/changelog/2024/06-07-sozu-1.0.2.md
+++ b/content/changelog/2024/06-07-sozu-1.0.2.md
@@ -13,6 +13,7 @@ authors:
 description: A big step forward for our open source reverse proxy
 aliases:
 - /changelog/2024-06-07-sozu-1.0.2
+- /changelog/2024-10-04-sozu-1.0.2
 excludeSearch: true
 ---
 
