--- a/content/api/v4.md
+++ b/content/api/v4.md
@@ -1,7 +1,7 @@
 ---
 type: docs
 title: APIv4 Reference
-description: Reference documentation for the Clever Cloud APIv4. Includes methods and examples for billing, deployments, load balacers, logs, etc.
+description: Reference documentation for the Clever Cloud APIv4 for billing, deployments, load balancers, logs, operators, etc.
 keywords:
 - openapi
 - api
