feat: use Swagger for OpenAPI display

--- a/content/api/v2.md
+++ b/content/api/v2.md
@@ -10,4 +10,11 @@ keywords:
 - automation
 - deployment
 - reference
+width: wide
+# See https://swagger.io/docs/open-source-tools/swagger-ui/usage/configuration/
+swagger:
+  url: https://api.clever-cloud.com/v2/openapi.json
+  filter: true
+  tagsSorter: alpha
+  operationsSorter: alpha
 ---
