--- a/content/api/v4.md
+++ b/content/api/v4.md
@@ -230,7 +230,7 @@ Answers with logs in a SSE (Server-Sent Events) stream. You can use optional par
 }
 ```
 
-| Parameter.                        | Type     | Comment                                                                                                 |
+| Parameter                         | Type     | Comment                                                                                                 |
 | :---                              | :---     | :---                                                                                                    |
 | `type`                            | `string` | `DatadogRecipient`, `ElasticsearchRecipient`, `NewRelicRecipient`, `OVHTCPRecipient`, `RawRecipient`    |
 | `username`                        | `string` | Basic Auth username                                                                                     |
