changelog: Keycloak dashboard with Secured Multi Instances
a

--- a/content/api/v4.md
+++ b/content/api/v4.md
@@ -295,9 +295,9 @@ Example response:
 - Type: `POST`
 - Response code: `204`
 
-### Network groups
+### Network Groups
 You can add the deployed service main application in a [Network Group](/doc/develop/network-groups/) to activate some enhanced features:
-- `keycloak`: two instances are deployed and synced through a Network Group
+- `keycloak`: [Secured Multi Instances feature](/doc/addons/keycloak/#secured-multi-instances)
 - `otoroshi`: once in a Network Group, an Otoroshi instance can be used in front of Clever Cloud applications
 
 - `/v4/addon-providers/addon-{operator_name}/addons/{operator_id}/networkgroup`
