api(operators): update response object

--- a/content/api/v4.md
+++ b/content/api/v4.md
@@ -268,6 +268,10 @@ Example response:
   "javaVersion": "X", # Optional
   "phpVersion": "X",  # Optional
   "accessUrl": "https://service-web-ui-id.services.clever-cloud.com",
+  "initialCredentials": { # Optional
+    "user": "user_name",
+    "password": "user_password"
+  },
   "api": { # Optional
     "url": "https://service-api-id.services.clever-cloud.com",
     …
@@ -281,10 +285,6 @@ Example response:
     …
   },
   "features": {
-    …
-  },
-  "envVars": {
-    "VAR_NAME": "value",
     …
   }
 }
