fix: .Net to .NET

--- a/content/changelog/2024/05-30-php-8.3-java-22.md
+++ b/content/changelog/2024/05-30-php-8.3-java-22.md
@@ -19,9 +19,9 @@ We've updated some of our images and deployed them without any impact for our us
 * **Common:**
   * Linux kernel 6.8.11 (PHP is still 6.8.6)
   * Node.js 20.14.0 as default version
-* **.Net, Go, Rust:**
+* **.NET, Go, Rust:**
   * Fix for crons
-* **.Net:**
+* **.NET:**
   * Fix for deployment issues with 8.x branch
 * **Java:**
   * Support for Java 22 (non LTS)
